add files once to dataset, show added files